// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton applies full width styling 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexShrink": 1,
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="radio-button-container-option-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "relative",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f3f4f6",
            "borderColor": "#4b5563",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 1,
            "display": "flex",
            "height": 16,
            "justifyContent": "center",
            "position": "relative",
            "width": 16,
          }
        }
        testID="radio-button-option-1"
      />
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        {
          "flexShrink": 1,
        }
      }
    >
      Option 1
    </Text>
  </View>
</View>
`;

exports[`RadioButton renders correctly and matches snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexShrink": 1,
      "opacity": 1,
    }
  }
  testID="radio-button-container-option-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "position": "relative",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f3f4f6",
            "borderColor": "#4b5563",
            "borderRadius": 9999,
            "borderStyle": "solid",
            "borderWidth": 1,
            "display": "flex",
            "height": 16,
            "justifyContent": "center",
            "position": "relative",
            "width": 16,
          }
        }
        testID="radio-button-option-1"
      />
    </View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        {
          "flexShrink": 1,
        }
      }
    >
      Option 1
    </Text>
  </View>
</View>
`;
